# serial-winners-project-c

ADbottonequipment/: Makefile  Makefile.am  Makefile.in  adbottonequipment.glade.bak  adbottonequipment.gladep  config.h  config.status  configure  configure.in
ADbottonequipment/autom4te.cache/: output.0  requests  traces.0  traces.1
ADbottonequipment/po/: Makefile  Makefile.in
ADbottonequipment/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c
adbottonaddclient/: Makefile.am  adbottonaddclient.glade.bak  adbottonaddclient.gladep  configure.in
adbottonaddclient/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c
project3/: Makefile  config.status  project3.glade
project3/autom4te.cache/: requests
project3/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  greeting.c  greeting.h  interface.c.bak  project3
project3/src/.deps/: greeting.Po
smart/client/: Makefile  client.glade  client.txt  config.status  ouvrier.glade.bak  ouvrier.gladep.bak  projet7.glade.bak  users
smart/client/autom4te.cache/: requests
smart/client/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  main.c  ouvrier  projet7  tree.c  tree.h
